<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_background"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:layout_width="164dp"
        android:layout_height="153dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05"
        app:srcCompat="@drawable/gymtech_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="125dp"
        android:layout_height="43dp"
        android:text="@string/kayit_ol"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="sans-serif-condensed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.279" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="67dp"
        android:hint="@string/mail"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:boxBackgroundColor="#7E57C2"
        app:boxStrokeColor="@color/purple_500"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.399"
        app:startIconDrawable="@drawable/ic_person">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegisterMail"
            android:layout_width="match_parent"
            android:layout_height="57dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/RegisterButton"
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:background="#7E57C2"
        android:text="@string/kayit_ol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.799"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="114dp"
        android:layout_height="36dp"
        android:background="?android:attr/selectableItemBackground"
        android:text="@string/giris_yap"
        android:textColor="@color/purple_200"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.74"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.889"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="67dp"
        android:hint="@string/sifreyi_tekrar_giriniz"
        app:hintTextColor="@color/white"
        android:textColorHint="@color/light_grey"
        app:boxBackgroundColor="#7E57C2"
        app:boxStrokeColor="@color/purple_500"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676"
        app:startIconDrawable="@drawable/ic_key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegisterRePassword"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="138dp"
        android:layout_height="28dp"
        android:text="@string/zaten_ye_misin"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.89"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="357dp"
        android:layout_height="67dp"
        android:hint="@string/sifre"
        android:textColorHint="@color/light_grey"
        app:hintTextColor="@color/white"
        app:boxBackgroundColor="#7E57C2"
        app:boxStrokeColor="@color/purple_500"
        app:endIconMode="password_toggle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.536"
        app:startIconDrawable="@drawable/ic_key">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>